convert for virtual thread